added highlights, service, and students web sites

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -4,3 +4,8 @@
 - date: <strong>June 2018</strong>
   headline: "Our tool demo paper <strong>DiffViz: A Diff Algorithm Independent Visualization Tool for Edit Scripts</strong> has been accepted at <a href=\"https://icsme2018.github.io/\">ICSME 2018</a> in Madrid, Spain."
   
+- date: <strong>June 2018</strong>
+  headline: "Joined the PC of <a href=\"https://saner2019.github.io/\">SANER 2019</a> taking place in Hangzhou, China."
+
+- date: <strong>May 2018</strong> 
+  headline: "Our paper <strong>Towards Model Checking Security of Real Time Java Software</strong> has been accepted at <a href=\"http://hpcs2018.cisedu.info/2-conference/workshops---hpcs2018/workshop10-shpcs\">SHPCS 2018</a>, co-located with <a href=\"http://hpcs2018.cisedu.info/\">HPCS 2017</a> in Orléans, France."
