added ESEC/FSE PC news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>July 2018</strong>
+  headline: "Joined the <a href=\"https://http://esec-fse19.ut.ee/\">ESEC/FSE 2019</a> PC."
+
 - date: <strong>June 2018</strong>
   headline: "Our paper <strong>Generating Accurate and Compact Edit Scripts using Tree Differencing</strong> has been accepted at <a href=\"https://icsme2018.github.io/\">ICSME 2018</a> in Madrid, Spain."
   
