added ASE 2018 paper

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: <strong>July 2018</strong>
+  headline: "Our paper <strong>Noise and Heterogeneity in Historical Build Data: An Empirical Study of Travis CI</strong> has been accepted at <a href=\"http://www.ase2018.com//\">ASE 2018</a> in Montpellier, France."
+
+- date: <strong>July 2018</strong>
   headline: "Joined the <a href=\"http://esec-fse19.ut.ee/\">ESEC/FSE 2019</a> PC."
 
 - date: <strong>June 2018</strong>
