updated publications, news, and services

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>December 2018</strong>
+  headline: "Our paper <strong>Can I Depend on You? Mapping the Dependency and Quality Landscape of ROS Packages</strong> has been accepted at <a href=\"http://irc.asia.edu.tw/2019/\">IRC 2018</a> in Naples, Italy."
+
 - date: <strong>October 2018</strong>
   headline: "Our paper <strong>Exploring Visual Comparison of Multivariate Runtime Statistics</strong> has been accepted at <a href=\"http://www.performance-symposium.org/2018/\">SSP 2018</a> in Hildesheim, Germany."
 
