--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>March 2019</strong>
+  headline: "Our paper <strong>Semantics-Driven Extraction of Timed Automata from Java Programs</strong> has been accepted for publication in the journal Empirical Software Engineering."
+
 - date: <strong>December 2018</strong>
   headline: "Our paper <strong>Can I Depend on You? Mapping the Dependency and Quality Landscape of ROS Packages</strong> has been accepted at <a href=\"http://irc.asia.edu.tw/2019/\">IRC 2018</a> in Naples, Italy."
 
