--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: <strong>March 2019</strong>
+  headline: "Excited to start my Sabbatical at <a href=\"https://www.dynatrace.com/\">Dynatrace</a> - the leading company providing cloud management and monitoring solutions. I will be there until end of August 2019."
+  
+- date: <strong>March 2019</strong>
   headline: "Our paper <strong>Semantics-Driven Extraction of Timed Automata from Java Programs</strong> has been accepted for publication in the journal Empirical Software Engineering."
 
 - date: <strong>December 2018</strong>
