--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -2,12 +2,12 @@
   image: 
   authors: G. Liva, M. T. Khan, and M. Pinzger 
   proceedings: Journal of Empirical Software Engineering (EMSE)
-  pages: to appear
+  pages: online
   publisher: Springer
   year: 2019
   description: 
   link:
-    url: 
+    url: https://link.springer.com/article/10.1007/s10664-019-09699-5
     display: 
   highlight: 
 
