updated pubs and news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>July 2019</strong>
+  headline: "Our paper <strong>What kind of questions do developers ask on Stack Overflow? A comparison of automated approaches to classify posts into question categories</strong> has been accepted for publication in the journal Empirical Software Engineering."
+
 - date: <strong>May 2019</strong>
   headline: "<a href=\"https://mitschi.github.io/\">Christian Macho</a> successfully defended his PhD Thesis \"Preventing and Repairing Build Breakage\". Well done Christian!!!"
 
