--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>August 2019</strong>
+  headline: "I will give a seminar on \"Mining and Analyzing Source Code Changes\" at the <a href=\"https://siesta.si.usi.ch/2019/\">SIESTA 2019 International Summer School on Software Engineering</a> in Termoli, Italy."
+  
 - date: <strong>July 2019</strong>
   headline: "Our paper <strong>What kind of questions do developers ask on Stack Overflow? A comparison of automated approaches to classify posts into question categories</strong> has been accepted for publication in the journal Empirical Software Engineering."
 
