--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -5,11 +5,11 @@
   pages: to appear
   publisher: Springer
   year: 2019
-  description: 
+  description: "On question and answer sites, such as Stack Overflow (SO), developers use tags to label the content of a post and to support developers in question searching and browsing. However, these tags mainly refer to technological aspects instead of the purpose of the question. Tagging questions with their purpose can add a new dimension to the identification of discussed topics in posts on SO. In this paper, we aim at automating the classification of SO question posts into seven question categories. As a first step, we harmonized existing taxonomies of question categories and then, we manually classified 1,000 SO questions according to our new taxonomy. We then use this data set to automate the classification of posts using two approaches. The results show that using the regular expression approach, we can classify posts into the correct question category with an average precision and recall of 0.90, and an MCC of 0.68." 
   link:
-    url: 
+    url: ../papers/Beyer2019-questions.pdf
     display: pdf
-  highlight: 
+  highlight: 1
 
 - title: "Semantics-Driven Extraction of Timed Automata from Java Programs"
   image: 
@@ -127,7 +127,7 @@ A demo of the installation and example usage of the tool is available here: <a h
   link:
     url: ../papers/Liva2018-timeerrors.pdf
     display: pdf
-  highlight: 1
+  highlight: 
 
 - title: "Co-Evolution Analysis of Production and Test Code by Learning Association Rules of Changes"
   image: 
