--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,12 @@
+- date: <strong>September 2019</strong>
+  headline: "Joined the PC of <a href=\"http://2020.msrconf.org/\">MSR 2020</a> co-located with ICSE in Seoul, South Korea."
+
+- date: <strong>September 2019</strong>
+  headline: "Joined the PC of the <a href=\"https://conf.researchr.org/track/icse-2020/icse-2020-ACM-Student-Research-Competition\">ICSE 2020 ACM Student Research Competition</a>."
+
+- date: <strong>August 2019</strong>
+  headline: "Joined the PC of <a href=\"https://saner2020.csd.uwo.ca/\">SANER 2020</a> taking place in London, Ontario, Canada."
+
 - date: <strong>August 2019</strong>
   headline: "I will give a seminar on \"Mining and Analyzing Source Code Changes\" at the <a href=\"https://siesta.si.usi.ch/2019/\">SIESTA 2019 International Summer School on Software Engineering</a> in Termoli, Italy."
   
