--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: <strong>October 2019</strong>
+  headline: "Co-organizing the 3rd Workshop on Validation, Analysis and Evolution of Software Tests (<a href=\"http://vst2020.scch.at/\">VST</a>) co-located with <a href=\"https://saner2020.csd.uwo.ca/\">SANER 2020</a>."
+
+- date: <strong>October 2019</strong>
   headline: "Our paper <strong>Automatic Repair of Timestamp Comparisons</strong> has been accepted for publication in the IEEE journal Transactions on Software Engineering."
 
 - date: <strong>September 2019</strong>
