removed link to serg wiki - will go offline soon

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -56,7 +56,7 @@
   headline: "Our paper <strong>Towards Model Checking Security of Real Time Java Software</strong> has been accepted at <a href=\"http://hpcs2018.cisedu.info/2-conference/workshops---hpcs2018/workshop10-shpcs\">SHPCS 2018</a>, co-located with <a href=\"http://hpcs2018.cisedu.info/\">HPCS 2017</a> in Orléans, France."
   
 - date: <strong>April 2018</strong>
-  headline: "<a href=\"https://serg.aau.at/bin/view/StefanieBeyer/WebHome\">Stefanie Beyer</a> successfully defended her PhD Thesis <strong>Identifying Android App Developers’ Challenges through Mining Stack Overflow</strong>. Well done Steffi!"
+  headline: "<a href=\"https://www.aau.at/en/isys/serg/team/beyer-stefanie/\">Stefanie Beyer</a> successfully defended her PhD Thesis <strong>Identifying Android App Developers’ Challenges through Mining Stack Overflow</strong>. Well done Steffi!"
 
 - date: <strong>March 2018</strong> 
   headline: "Our paper <strong>Automatically Classifying Posts into Question Categories on Stack Overflow</strong> has been accepted at <a href=\"https://conf.researchr.org/home/icpc-2018\">ICPC 2018</a>, co-located with <a href=\"https://www.icse2018.org/\">ICSE 2018</a> in Gothenborg, Sweden."
