added news and Giovanni's TSE paper

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>November 2019</strong>
+  headline: "Our paper <strong>Verifying Temporal Specifications of Java Programs</strong> has been accepted for publication in the Springer Software Quality Journal."
+
 - date: <strong>October 2019</strong>
   headline: "Co-organizing the 3rd Workshop on Validation, Analysis and Evolution of Software Tests (<a href=\"http://vst2020.scch.at/\">VST</a>) co-located with <a href=\"https://saner2020.csd.uwo.ca/\">SANER 2020</a>."
 
