--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,6 +1,32 @@
+- title: "Data-driven Robot Introspection"
+  image: 
+  authors: B. Dieber, S. Taurer, T. Haspl, M. Pichler, and M. Pinzger
+  proceedings: In Proceedings of the International Conference on Robotic Computing (IRC)
+  pages: to appear
+  publisher: IEEE
+  year: 2020
+  description: 
+  link:
+    url: 
+    display: 
+  highlight: 
+
+- title: "Leveraging Machine Learning for Software Redocumentation"
+  image: 
+  authors: V. Geist, M. Moser, J. Pichler, S. Beyer, and M. Pinzger
+  proceedings: In Proceedings of the International Conference on Software Analysis, Evolution and Reengineering (SANER), Industrial Track
+  pages: to appear
+  publisher: IEEE
+  year: 2020
+  description: 
+  link:
+    url: 
+    display: 
+  highlight: 
+
 - title: "Verifying Temporal Specifications of Java Programs"
   image: 
-  authors: F. Spegni, and L. Spalazzi, G. Liva, M. Pinzger, and A. Bollin 
+  authors: F. Spegni, L. Spalazzi, G. Liva, M. Pinzger, and A. Bollin 
   proceedings: Software Quality Journal (SQJ)
   pages: to appear
   publisher: Springer
@@ -10,7 +36,6 @@
     url: 
     display: 
   highlight: 
-
 
 - title: "Automatic Repair of Timestamp Comparisons"
   image: tsrepair.png
@@ -24,7 +49,6 @@
     url: ../papers/Liva2019-repair.pdf
     display: pdf
   highlight: 1
-
 
 - title: "What kind of questions do developers ask on Stack Overflow? A comparison of automated approaches to classify posts into question categories"
   image: 
