added services and phd students

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,10 @@
 - date: <strong>January 2020</strong>
+  headline: "Joined the PC of <a href=\"https://icsme2020.github.io/\">ICSME 2020</a> taking place  in Adelaide, Australia."
+
+- date: <strong>January 2020</strong>
+  headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/icse-2021\">ICSE 2021</a> taking place  in Madrid, Spain."
+
+- date: <strong>January 2020</strong>
   headline: "Our short paper <strong>Data-driven Robot Introspection</strong> has been accepted at <a href=\"http://irc.asia.edu.tw/2020\">IRC 2020</a> in Taichung, Taiwan."
 
 - date: <strong>December 2019</strong>
