updated news, saner sc

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>February 2020</strong>
+  headline: "Because of the Coronavirus, <a href=\"http://irc.asia.edu.tw/2020\">IRC 2020</a> and <a href=\"https://www.erross.org/\">ERRoSS 2020</a> have been postponed."
+
 - date: <strong>January 2020</strong>
   headline: "Joined the PC of <a href=\"https://icsme2020.github.io/\">ICSME 2020</a> taking place  in Adelaide, Australia."
 
