--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: <strong>May 2020</strong>
-  headline: "Joined the PC of <a href=\"https://https://www.software-quality-days.com/en/\">SWQD 2021</a> taking place in Vienna, Austria."
+  headline: "Joined the PC of <a href=\"https://www.software-quality-days.com/en/\">SWQD 2021</a> taking place in Vienna, Austria."
 
 - date: <strong>February 2020</strong>
   headline: "Because of the Coronavirus, <a href=\"http://irc.asia.edu.tw/2020\">IRC 2020</a> and <a href=\"https://www.erross.org/\">ERRoSS 2020</a> have been postponed."
