--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -28,7 +28,7 @@
   image: 
   authors: F. Spegni, L. Spalazzi, G. Liva, M. Pinzger, and A. Bollin 
   proceedings: Software Quality Journal (SQJ)
-  pages: Open Access
+  pages: vol. 28, no. 2, pp. 695-744
   publisher: Springer
   year: 2020
   description: 
