--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,8 @@
 - date: <strong>May 2020</strong>
+  headline: "Our proposal for a Karl Popper Kolleg 
+ <a href=\" https://www.aau.at/forschung/forschungsprofil/karl-popper-kolleg/seerose/\">Responsible Safe and Secure Robotic Systems Engineering (SEEROSE)</a> has been accepted and will receive funding for four PhD students."
+  
+- date: <strong>May 2020</strong>
   headline: "Joined the PC of <a href=\"https://www.software-quality-days.com/en/\">SWQD 2021</a> taking place in Vienna, Austria."
 
 - date: <strong>February 2020</strong>
