updated ERRoSS info

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>August 2020</strong>
+  headline: "<a href=\"https://www.erross.org/\">ERRoSS 2020</a> submission-site has been reopened and welcomes new submission."
+
 - date: <strong>May 2020</strong>
   headline: "Our proposal for a Karl Popper Kolleg 
  <a href=\" https://www.aau.at/forschung/forschungsprofil/karl-popper-kolleg/seerose/\">Responsible Safe and Secure Robotic Systems Engineering (SEEROSE)</a> has been accepted and will receive funding for four PhD students."
@@ -6,7 +9,7 @@
   headline: "Joined the PC of <a href=\"https://www.software-quality-days.com/en/\">SWQD 2021</a> taking place in Vienna, Austria."
 
 - date: <strong>February 2020</strong>
-  headline: "Because of the Coronavirus, <a href=\"http://irc.asia.edu.tw/2020\">IRC 2020</a> and <a href=\"https://www.erross.org/\">ERRoSS 2020</a> have been postponed."
+  headline: "Because of the Coronavirus, <a href=\"http://irc.asia.edu.tw/2020\">IRC 2020</a> and <a href=\"https://www.erross.org/\">ERRoSS 2020</a> have been moved to November 9-11th, 2020."
 
 - date: <strong>January 2020</strong>
   headline: "Joined the PC of <a href=\"https://icsme2020.github.io/\">ICSME 2020</a> taking place  in Adelaide, Australia."
