--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: <strong>August 2020</strong>
-  headline: "<a href=\"https://www.erross.org/\">ERRoSS 2020</a> submission-site has been reopened and welcomes new submission."
+  headline: "<a href=\"https://www.erross.org/\">ERRoSS 2020</a> submission-site has been reopened and welcomes new submissions."
 
 - date: <strong>May 2020</strong>
   headline: "Our proposal for a Karl Popper Kolleg 
