--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,11 @@
+- date: <strong>September 2020</strong>
+  headline: "Joined the PC of <a href=\"https://se-2021.tu-bs.de/\">SE 2021</a> taking place in Braunschweig, Germany."
+
 - date: <strong>August 2020</strong>
   headline: "<a href=\"https://www.erross.org/\">ERRoSS 2020</a> submission-site has been reopened and welcomes new submissions."
+
+- date: <strong>June 2020</strong>
+  headline: "Joined the PC of <a href=\"https://2021.esec-fse.org/\">ESEC/FSE 2021</a> taking place in Athens, Greece."
 
 - date: <strong>May 2020</strong>
   headline: "Our proposal for a Karl Popper Kolleg 
