--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>November 2020</strong>
+  headline: "Co-organizing the 4th Workshop on Validation, Analysis and Evolution of Software Tests (<a href=\"http://vst2021.scch.at/\">VST 2021</a>) co-located with <a href=\"https://saner2021.shidler.hawaii.edu/\">SANER 2021</a>."
+
 - date: <strong>September 2020</strong>
   headline: "Joined the PC of <a href=\"https://se-2021.tu-bs.de/\">SE 2021</a> taking place in Braunschweig, Germany."
 
@@ -33,7 +36,7 @@
   headline: "Our paper <strong>Verifying Temporal Specifications of Java Programs</strong> has been accepted for publication in the Springer Software Quality Journal."
 
 - date: <strong>October 2019</strong>
-  headline: "Co-organizing the 3rd Workshop on Validation, Analysis and Evolution of Software Tests (<a href=\"http://vst2020.scch.at/\">VST</a>) co-located with <a href=\"https://saner2020.csd.uwo.ca/\">SANER 2020</a>."
+  headline: "Co-organizing the 3rd Workshop on Validation, Analysis and Evolution of Software Tests (<a href=\"http://vst2020.scch.at/\">VST 2020</a>) co-located with <a href=\"https://saner2020.csd.uwo.ca/\">SANER 2020</a>."
 
 - date: <strong>October 2019</strong>
   headline: "Our paper <strong>Automatic Repair of Timestamp Comparisons</strong> has been accepted for publication in the IEEE journal Transactions on Software Engineering."
