added ASQT 2020 talk

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: <strong>November 2020</strong>
+  headline: "Gave an invited talk on Mining and Analyzing Source Code Changes at <a href=\"https://asqt.cicero-software.com/\">ASQT 2020</a>."
+
+- date: <strong>November 2020</strong>
   headline: "Co-organizing the 4th Workshop on Validation, Analysis and Evolution of Software Tests (<a href=\"http://vst2021.scch.at/\">VST 2021</a>) co-located with <a href=\"https://saner2021.shidler.hawaii.edu/\">SANER 2021</a>."
 
 - date: <strong>September 2020</strong>
