added Taimoor's paper

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: <strong>November 2020</strong>
+  headline: "Our paper <strong>Runtime Protection of Real-time Critical Control Applications against Known Threats</strong> has been published in the journal IEEE Design & Test."
+
+- date: <strong>November 2020</strong>
   headline: "Gave an invited talk on Mining and Analyzing Source Code Changes at <a href=\"https://asqt.cicero-software.com/\">ASQT 2020</a>."
 
 - date: <strong>November 2020</strong>
