fixed a type in the news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: <strong>December 2020</strong>
-  headline: "Our paper <strong>The Nature of Build Changes An Empirical Study of Maven-based Build Systems</strong> has been accepted for publication in the Springer journal Empirical Software Engineering (EMSE)."
+  headline: "Our paper <strong>The Nature of Build Changes: An Empirical Study of Maven-based Build Systems</strong> has been accepted for publication in the Springer journal Empirical Software Engineering (EMSE)."
 
 
 - date: <strong>November 2020</strong>
