added job offer and vissoft 2021

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,8 @@
 - date: <strong>December 2020</strong>
-  headline: "Our paper <strong>The Nature of Build Changes: An Empirical Study of Maven-based Build Systems</strong> has been accepted for publication in the Springer journal Empirical Software Engineering (EMSE)."
+  headline: "Joined the PC of <a href=\"https://vissoft.info/2021/\">VISSOFT 2021</a> co-located with <a href=\"https://icsme2021.github.io/\">ICSME 2021</a> in Luxembourg City."
 
+- date: <strong>December 2020</strong>
+  headline: "Our paper <strong>The Nature of Build Changes: An Empirical Study of Maven-based Build Systems</strong> has been accepted for publication in the Springer journal Empirical Software Engineering (EMSE)."
 
 - date: <strong>November 2020</strong>
   headline: "Our paper <strong>Runtime Protection of Real-time Critical Control Applications against Known Threats</strong> has been published in the journal IEEE Design & Test."
