added Breiling's publication

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>January 2021</strong>
+  headline: "Our paper <strong>A Cryptography-Powered Infrastructure to Ensure the Integrity of Robot Workflows</strong> has been published in the Journal of Cybersecurity and Privacy."
+
 - date: <strong>December 2020</strong>
   headline: "Joined the PC of <a href=\"https://vissoft.info/2021/\">VISSOFT 2021</a> co-located with <a href=\"https://icsme2021.github.io/\">ICSME 2021</a> in Luxembourg City."
 
