added open positions, fixed issue with if statements in publications

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: <strong>May 2021</strong>
+  headline: "I am looking for <strong>two PhD students</strong> who would like to do a PhD in Software Engineering. See Open position for more information."
+
 - date: <strong>January 2021</strong>
   headline: "Our paper <strong>A Cryptography-Powered Infrastructure to Ensure the Integrity of Robot Workflows</strong> has been published in the Journal of Cybersecurity and Privacy."
 
