added news and Karin's pdf

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: <strong>May 2021</strong>
+  headline: "Feeling honored. Received my second <a href=\"https://conf.researchr.org/track/icse-2021/icse-2021-awards#Award-Recipients-at-ICSE-2021\">ICSE Distinguished Reviewer Award</a>."
+
+- date: <strong>May 2021</strong>
   headline: "I am looking for <strong>two PhD students</strong> who would like to do a PhD in Software Engineering. See Open position for more information."
 
 - date: <strong>January 2021</strong>
