--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -7,8 +7,8 @@
   year: 2021
   description: 
   link:
-    url: 
-    display:
+    url: ../papers/Hodnigg2021-comprehending.pdf
+    display: pdf
   highlight: 
 
 
